# Study_cards

backend/: .env  Pipfile  docker-composte.yaml  manage.py  pyproject.toml  requirements.txt  start.sh
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: user.py
backend/app/core/: config.py  logs.py  security.py
backend/app/crud/: base.py
backend/app/db/: session.py
backend/app/models/: user.py
backend/app/schemas/: user.py
