[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Andrew <71615580+Jockesss@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

